[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ressources/Restaurant/table.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Restaurant/Restaurant.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Restaurant/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Restaurant/Restaurant.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 104 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 72 )

[sub_resource type="Environment" id=5]
background_mode = 4
glow_enabled = true
glow_intensity = 0.95
glow_strength = 1.3
glow_bicubic_upscale = true

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 152, 32 )

[node name="Restaurant" type="Node2D"]
script = ExtResource( 5 )

[node name="Env" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Env"]
scale = Vector2( 10, 10 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 131072, 4, 0, 131073, 3, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 3, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 3, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 196608, 4, 0, 196609, 3, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 3, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 3, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 262144, 4, 0, 262145, 3, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 3, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 3, 0, 262156, 4, 0, 262157, 1, 0, 262158, 1, 0, 262159, 4, 0, 327680, 4, 0, 327681, 3, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 3, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 3, 0, 327692, 4, 0, 327693, 1, 0, 327694, 1, 0, 327695, 4, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 1, 0, 393230, 1, 0, 393231, 3, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0 )

[node name="Sprite" type="Sprite" parent="Env"]
position = Vector2( 376, 480 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="Door" type="Area2D" parent="Env"]
position = Vector2( 488, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Door"]
position = Vector2( 664, 456 )
shape = SubResource( 3 )

[node name="Table" type="Area2D" parent="Env"]
position = Vector2( 512, 504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Table"]
position = Vector2( -32, -16 )
shape = SubResource( 4 )

[node name="TileMap2" type="TileMap" parent="Env"]
scale = Vector2( 10, 10 )
z_index = 99
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 131072, 6, 0, 131076, 6, 0, 131080, 6, 0, 131082, 6, 0, 131085, 6, 0, 131086, 6, 0, 196608, 5, 0, 196612, 6, 0, 196616, 5, 0, 196618, 6, 0, 196621, 5, 0, 196622, 6, 0, 262148, 5, 0, 262154, 5, 0, 262158, 5, 0, 393228, 7, 0, 393231, 7, 0 )

[node name="ChefSpawn" type="Position2D" parent="."]
position = Vector2( 1088, 480 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 192, 520 )

[node name="ChefDelay" type="Timer" parent="."]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="PlayerPos" type="Position2D" parent="."]
position = Vector2( 256, 520 )

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( 152, 528 )
shape = SubResource( 6 )
[connection signal="body_entered" from="Env/Door" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Env/Table" to="." method="_on_Table_body_entered"]
[connection signal="timeout" from="ChefDelay" to="." method="_on_ChefDelay_timeout"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]

[editable path="Player"]
